1.4.0
-add ASN redirect by server

1.3.0
-add stop mode button which is available on zappi v3 firmware

1.2.0
-add completed icon tile
-add state information like surplus and delayed
-add tile icon pause during surplus waiting

1.1.0
-add charge Watt and charged kWh to tile info during charging
-add valid login detection
-change refresh timer from 300 to 60 sec

1.0.0
-initial release juli 2020 